--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,67 @@
-/* Add CSS styling here */
+*{
+    font-family: 'Ubuntu', sans-serif;
+}
+header{
+    background-color: lightgrey;
+    padding: 0.5%;
+}
+header h1{
+    margin-left: 15px;
+}
+nav a{
+    display:inline-block;
+    padding:0.3% 0;
+    width: 4%;
+    text-align: center;
+    border-radius: 0;
+    text-decoration: none;
+    outline-color:black;
+    outline-style: solid;
+    color: black;
+}
+nav{
+    margin-left:2%;
+    padding-bottom: 1.5%;
+}
+.summary img{
+    width: 50%;
+    float: left;
+}
+.summary{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.aboutme{
+    padding: 10%;
+}
+.pets{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 1%;
+    flex-direction: row;
+    width: 110%;
+}
+.pets img{
+    width: 70%;
+}
+.pets p{
+    text-align: center;
+    width: 70%;
+}
+footer{
+    text-align: center;
+    background-color: lightgrey;
+    padding: 3%;
+}
+button{
+    color: black;
+    background-color: white;
+    border: black solid 1px;
+    padding: 5px 10px;
+}
+button a{
+    text-decoration: none;
+    color: black;
+}
